--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -132,7 +132,11 @@
 header.masthead {
     padding-top: 10rem;
     padding-bottom: calc(10rem - 4.5rem);
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5) 0%, var(--bright-purple) 100%),
+    background: linear-gradient(
+            to bottom,
+            rgba(255, 255, 255, 0.5) 0%,
+            var(--bright-purple) 100%
+        ),
         url("../../public/images/people-room.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -146,15 +150,12 @@ header.masthead .h1 {
 
 .page-section {
     padding: 4rem 0;
-  }
-
-
+}
 
 #portfolio .portfolio-box {
     position: relative;
     display: block;
     height: 400px;
-
 }
 
 #portfolio .portfolio-box .portfolio-box-caption {
@@ -175,7 +176,7 @@ header.masthead .h1 {
 #portfolio .portfolio-box img {
     max-height: 100%;
     width: 100%;
-    object-fit:cover;
+    object-fit: cover;
 }
 
 #portfolio .portfolio-box .portfolio-box-caption .project-category {
@@ -189,5 +190,28 @@ header.masthead .h1 {
 }
 
 #portfolio .portfolio-box:hover .portfolio-box-caption {
+    opacity: 1;
+}
+
+h1 {
+    font-family: "Zen Dots";
+    font-size: 3rem;
+    margin-bottom: 1vh;
+}
+.card-event-link {
+    outline: 1px solid transparent;
+    transition: outline 0.2s ease-in-out;
+}
+.card-event-link:hover {
+    outline: 2px solid var(--lime-yellow);
+}
+
+.card-event-link .overlay {
+    background-color: #f1eae269; /* color negro con opacidad */
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.card-event-link:hover .overlay {
     opacity: 1;
 }
