--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,3 @@
-* {
-    font-family: "B612 Mono", monospace;
-    font-size: 0.95rem;
-}
-
 :root {
     --cream: #f1eae2; /* Light Pecan Pie */
     --deep-purple: #221144; /* Shadow Planet */
@@ -10,6 +5,16 @@
     --royal-purple: #442288; /* Galactic Civilization */
     --soft-pink: #eadfd2; /* South Peak */
     --lime-yellow: #d5d717; /* Sulphur Spring */
+}
+
+* {
+    font-family: "Open Sans";
+    font-size: 0.95rem;
+}
+
+*::selection {
+    background-color: var(--cream);
+    color: var(--deep-purple);
 }
 
 /* Background color classes */
@@ -131,11 +136,10 @@
 
 header.masthead {
     padding-top: 10rem;
-    padding-bottom: calc(10rem - 4.5rem);
     background: linear-gradient(
             to bottom,
             rgba(255, 255, 255, 0.5) 0%,
-            var(--bright-purple) 100%
+            var(--deep-purple) 100%
         ),
         url("../../public/images/people-room.jpg");
     background-position: center;
@@ -198,8 +202,15 @@ h1 {
     font-size: 3rem;
     margin-bottom: 1vh;
 }
+
+h2 {
+    font-family: "Zen Dots";
+    font-size: 2rem;
+    margin-bottom: 1vh;
+}
 .card-event-link {
     outline: 1px solid transparent;
+    border-radius: 5px;
     transition: outline 0.2s ease-in-out;
 }
 .card-event-link:hover {
@@ -214,4 +225,19 @@ h1 {
 
 .card-event-link:hover .overlay {
     opacity: 1;
+}
+
+.top-title {
+    top: 110px;
+}
+
+@media (max-width: 992px) {
+    .top-title {
+        top: 165px;
+    }
+}
+.form-control:focus,
+.form-select:focus {
+    border-color: var(--lime-yellow);
+    box-shadow: 0 0 8px var(--lime-yellow);
 }
