--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -241,3 +241,14 @@ h2 {
     border-color: var(--lime-yellow);
     box-shadow: 0 0 8px var(--lime-yellow);
 }
+
+.zen-dots {
+    font-family: "Zen Dots";
+}
+
+.text-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
