--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -272,3 +272,23 @@ h2 {
     outline: none;
     box-shadow: none;
 }
+
+#scroll-top {
+    opacity: 0;
+    position: fixed;
+    bottom: 80px;
+    right: 40px;
+    background-color: var(--lime-yellow);
+    padding: 0.7rem 1rem;
+    border-radius: 40px;
+    z-index: 100;
+    border: none;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: opacity 0.3s ease, 0.4s ease-in-out, color 0.4s ease-in-out;
+}
+
+#scroll-top:hover {
+    background-color: var(--bright-purple);
+    color: var(--cream);
+}
