save events filter and modals

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -309,3 +309,12 @@ h2 {
 .fc-day-today.selected-day {
     background-color: var(--lime-yellow) !important;
 }
+
+.heart {
+    color: var(--soft-pink);
+    transition: color 0.2s ease;
+}
+
+.heart:hover {
+    color: var(--lime-yellow);
+}
